# project-init

./: README.md  main.py  pyproject.toml  recipes.yaml
project_init.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
